--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jsonlint": "^1.6.3",
     "raml2html": "^7.5.0",
     "raml2html-nmos-theme": "file:./raml2html-nmos-theme",
+    "raml2html-werk-theme": "^1.3.4",
     "remark-cli": "^7.0.1",
     "remark-preset-lint-recommended": "^3.0.3",
     "remark-validate-links": "^10.0.0",
